fix: sticky nav covering content when anchor link is activated

--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -6,3 +6,9 @@ body > header {
     z-index: 10;
     margin-bottom: 16px;
 }
+
+/* Prevent sticky nav covering content when anchor link is activated */
+
+:target {
+    scroll-margin-block-start: 100px;
+}
